--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,8 +19,29 @@
   }
 }
 
+
+@font-face {
+  font-family: 'Candra' !important;
+  src: url('/public//font/candara.ttf') format('truetype');
+}
+
+
 body {
-  background: var(--background);
+  background: #f9eddd !important;
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Candra' !important;
+}
+
+.loader {
+  border: 6px solid #f3f3f3;
+  border-top: 6px solid #000;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
